<resources>
    <string name="app_name" translatable="false">Sudoku</string>
    <string name="delete" translatable="false">X</string>
    <string name="continue_game">Continue game</string>
    <string name="new_game">New game</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="back">Back</string>
    <string name="congratulations">Congratulations!</string>
    <string name="your_time">Your time:</string>
    <string name="pb_time">Personal best:</string>
    <string name="new_pb">New personal best!</string>
    <string name="difficulty">Difficulty:</string>
    <string name="back_to_menu">Back to menu</string>
    <string name="settings">Settings</string>
    <string name="assists_header">Assists</string>
    <string name="highlights_title">Highlights</string>
    <string name="highlights_summary_off">Highlighting cells containing the selected number disabled.</string>
    <string name="highlights_summary_on">Highlighting cells containing the selected number enabled.</string>
    <string name="contact">Contact</string>
    <string name="email" translatable="false">Email</string>
    <string name="email_address" translatable="false">bajaklevente@gmail.com</string>
    <string name="github_username" translatable="false">leventebajak</string>
    <string name="github" translatable="false">GitHub</string>
    <string name="remaining_title">Remaining</string>
    <string name="remaining_summary_off">Showing the number of remaining cells with the selected value is disabled.</string>
    <string name="remaining_summary_on">Showing the number of remaining cells with the selected value is enabled.</string>
    <string name="very_hard">Very hard</string>
</resources>